--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/adm-zip": "^0.5.5",
     "@types/node": "22.5.1",
     "@types/papaparse": "^5.3.14",
