--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL="postgresql://root:1234@db:5432/allocation-db?schema=public&connect_timeout=300"
 
-# unccoment for local development
+# uncomment for local development
 # SERVER_URL="http://host.docker.internal:8000"
 # comment out for local development
 SERVER_URL="http://matching-service:8000"
