--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "date-fns-tz": "^3.1.3",
     "embla-carousel-react": "^8.2.1",
     "eslint-config-next": "v14.1.0",
+    "immer": "^10.1.1",
     "lucide-react": "^0.340.0",
     "next": "v14.1.0",
     "next-themes": "^0.2.1",
@@ -82,7 +83,7 @@
     "tailwindcss": "3.4.1",
     "uuid": "^9.0.1",
     "zod": "3.22.4",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.5",
