wip: Added matching pair data to db schema
Co-authored-by: Jacob Trevor <JakeTrevor@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,7 @@
     },
     {
       "tag": "MOVE",
-      "color": "#047857",
+      "color": "#34d399",
       "strikethrough": false,
       "underline": false,
       "backgroundColor": "transparent",
