cleared out unused utils

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "project": "",
     "settings": "",
     "preference": "",
+    "preferences": "",
     "icons": "",
     "dto": "json",
     "data-objects": "class",
