--- a/components.json
+++ b/components.json
@@ -5,12 +5,9 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "styles/global.css",
+    "css": "app/app.css",
     "baseColor": "slate",
     "cssVariables": true
   },
-  "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils"
-  }
+  "aliases": { "components": "@/components", "utils": "@/lib/utils" }
 }
