--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:populate": "pnpm run db:push --force-reset && eval $(grep '^DATABASE_URL' .env) && tsx src/lib/scripts/seed.ts",
     "docker:db": "docker compose -f docker/docker-compose.yml up -d",
     "docker:prod": "docker compose -f docker/docker-compose.yml -f docker/docker-compose.prod.override.yml up -d",
-    "dev:patch": "tsx src/lib/scripts/patch.ts",
+    "dev:patch": "tsx src/db/scripts/patch.ts",
     "dev:seed": "tsx src/db/seed.ts",
     "schema:change": "pnpm run db:generate && pnpm run db:push"
   },
