Finished mark submission form
Co-authored-by: Jacob Trevor <JakeTrevor@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tc": "tsc",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
-    "db:generate:push": "pnpm run db:generate && pnpm run db:push",
+    "db:generate-push": "pnpm run db:generate && pnpm run db:push",
     "db:studio": "prisma studio",
     "db:push": "eval $(grep '^DATABASE_URL' .env) && prisma db push",
     "db:drop": "eval $(grep '^DATABASE_URL' .env) && prisma migrate reset",
