--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
     "tc": "tsc",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --schema ./prisma/schema",
     "db:generate": "prisma generate",
     "db:generate-push": "pnpm run db:generate && pnpm run db:push",
     "db:studio": "prisma studio",
@@ -62,7 +62,6 @@
     "date-fns": "^3.3.1",
     "date-fns-tz": "^3.1.3",
     "embla-carousel-react": "^8.2.1",
-    "eslint-config-next": "v14.1.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.340.0",
     "next": "v14.1.0",
@@ -88,22 +87,24 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/adm-zip": "^0.5.5",
     "@types/node": "22.5.1",
     "@types/papaparse": "^5.3.14",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "8.57.0",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "jiti": "^2.4.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.15.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "typescript-eslint": "^8.26.1"
   },
   "packageManager": "pnpm@9.15.1"
 }
