--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "paths": { "@/*": ["./src/*"] },
     "noUncheckedIndexedAccess": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "eslint.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
