--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:email": "email dev --dir ./src/emails/messages -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -44,6 +45,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "0.0.36",
     "@t3-oss/env-core": "^0.9.2",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-table": "^8.21.2",
@@ -66,6 +68,7 @@
     "lucide-react": "^0.340.0",
     "next": "v14.1.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.10.0",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.35",
     "prettier": "^3.5.2",
@@ -92,6 +95,7 @@
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/adm-zip": "^0.5.5",
     "@types/node": "22.5.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.14",
     "@types/uuid": "^9.0.8",
     "eslint": "9.22.0",
@@ -100,6 +104,7 @@
     "jiti": "^2.4.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.15.0",
+    "react-email": "4.0.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
