more work on emails - created mailer class and added it to TRPC context - polished off some emails for more professional look. - modified email dev script to load env vars - new env vars to env.ts file - setup mail transporter to use new env vars

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:email": "email dev --dir ./src/emails/messages -p 3001",
+    "dev:email": "dotenvx run -- email dev --dir ./src/emails/messages -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -91,6 +91,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.39.1",
     "@eslint/js": "^9.22.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/adm-zip": "^0.5.5",
