--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,13 +9,8 @@ COPY .env .env
 COPY prisma ./prisma
 
 COPY package.json pnpm-lock.yaml* ./
-RUN \
-  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-  elif [ -f package-lock.json ]; then npm ci; \
-  elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm i --frozen-lockfile; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
-
+RUN corepack enable pnpm
+RUN pnpm i --frozen-lockfile
 RUN pnpm db:generate
 
 ##### BUILDER
@@ -28,12 +23,8 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 COPY .env .env.production
 
-RUN \
-  if [ -f yarn.lock ]; then yarn run build; \
-  elif [ -f package-lock.json ]; then npm run build; \
-  elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm run build; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
+RUN corepack enable pnpm 
+RUN pnpm run build
 
 
 ##### RUNNER
@@ -42,8 +33,8 @@ FROM --platform=linux/amd64 node:22-alpine AS runner
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
 
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
