added email build script; changed some wording in the footer

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:email": "dotenvx run -- email dev --dir ./src/emails/messages -p 3001",
+    "build:email": "dotenvx run -- email build --dir ./src/emails/messages",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
