--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.39.1",
     "@eslint/js": "^9.22.0",
+    "@faker-js/faker": "^9.6.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/adm-zip": "^0.5.5",
     "@types/node": "22.5.1",
