--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ name: "amps"
 
 services:
   db:
-    image: postgres:latest
+    image: postgres:16
     ports:
       - "127.0.0.1:6565:5432"
     volumes:
