--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.15.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.1.2",
+    "@prisma/client": "^5.18.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "0.0.36",
     "@t3-oss/env-core": "^0.9.2",
-    "@tanstack/react-query": "^5.24.1",
+    "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.21.2",
     "@trpc/client": "11.0.0-next-beta.294",
     "@trpc/react-query": "11.0.0-next-beta.294",
@@ -59,23 +59,23 @@
     "@uiw/react-md-editor": "^4.0.4",
     "adm-zip": "^0.5.16",
     "autoprefixer": "10.4.17",
-    "axios": "^1.6.7",
+    "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "embla-carousel-react": "^8.2.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.340.0",
-    "next": "v14.1.0",
+    "next": "14.1.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.0",
     "papaparse": "^5.4.1",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.41",
     "prettier": "^3.5.2",
     "react": "18.2.0",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.52.2",
@@ -84,7 +84,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-math": "^6.0.0",
     "sharp": "^0.32.6",
-    "sonner": "^1.4.1",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.0",
     "tailwindcss": "3.4.1",
@@ -106,13 +106,13 @@
     "eslint-config-next": "15.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jiti": "^2.4.2",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.15.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^5.18.0",
     "react-email": "4.0.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.1",
+    "tsx": "^4.17.0",
     "typescript": "5.8.2",
     "typescript-eslint": "^8.26.1"
   },
