--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "db:seed": "eval $(grep '^DATABASE_URL' .env) && tsx src/db/seed.ts",
     "docker:db": "docker compose -f docker/docker-compose.yml up -d",
     "docker:prod": "docker compose -f docker/docker-compose.yml -f docker/docker-compose.prod.override.yml up -d",
-    "dev:patch": "tsx src/db/scripts/patch.ts"
+    "dev:patch": "tsx src/db/scripts/patch.ts",
+    "clearLogs": "rm *.log"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -89,6 +90,7 @@
     "tailwind-merge": "^2.5.0",
     "tailwindcss": "3.4.1",
     "uuid": "^9.0.1",
+    "winston": "^3.17.0",
     "zod": "3.22.4",
     "zustand": "^4.5.4"
   },
