--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,27 +1,23 @@
 ##### DEPENDENCIES
 
-FROM --platform=linux/amd64 node:22-alpine AS deps
+FROM node:22-alpine AS deps
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
-
-COPY .env .env
 
 COPY prisma ./prisma
 
 COPY package.json pnpm-lock.yaml* ./
 RUN corepack enable pnpm
 RUN pnpm i --frozen-lockfile
-RUN pnpm db:generate
 
 ##### BUILDER
 
-FROM --platform=linux/amd64 node:22-alpine AS builder
+FROM node:22-alpine AS builder
 RUN apk add --no-cache libc6-compat openssl
-
 WORKDIR /app
+
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-COPY .env .env.production
 
 RUN corepack enable pnpm 
 RUN pnpm run build
@@ -29,12 +25,12 @@ RUN pnpm run build
 
 ##### RUNNER
 
-FROM --platform=linux/amd64 node:22-alpine AS runner
+FROM node:22-alpine AS runner
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
 
-ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production \ 
+    NEXT_TELEMETRY_DISABLED=1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
