--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ DEV_ENV="LOCAL"
 DEV_NAME="SECRET"
 DEV_ID="SECRET"
 DEV_EMAIL="SECRET"
+
+
+
+MAIL_HOST="smtp.ethereal.email"
+MAIL_PORT=587
+MAIL_USER="Your Ethereal email"
+MAIL_PASSWORD="your Ethereal Password"
