--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,10 +3,8 @@ name: "Docker build and push to GHCR"
 on:
   push:
     branches:
-      - "main"
-      - "staging"
-    paths-ignore:
-      - "**/*.md"
+      - main
+      - staging
 
 jobs:
   build_and_publish:
@@ -33,6 +31,7 @@ jobs:
       - name: "Build and push app"
         uses: docker/build-push-action@v5
         with:
+          file: ./docker/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
