--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     ".next/types/**/*.ts",
     "eslint.config.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/db/migrations"]
 }
