--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start",
     "lint": "eslint",
     "tc": "tsc",
+    "test": "vitest",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:generate-push": "pnpm run db:generate && pnpm run db:push",
@@ -122,7 +123,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.17.0",
     "typescript": "5.8.2",
-    "typescript-eslint": "^8.26.1"
+    "typescript-eslint": "^8.26.1",
+    "vitest": "^3.2.0"
   },
   "packageManager": "pnpm@9.15.1"
 }
