put string back onto one line

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-latest,\
-            ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-${{ steps.date.outputs.date }},\
-            ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-${{ github.sha }}
+          tags: ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-latest,ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-${{ steps.date.outputs.date }},ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-${{ github.sha }}
