--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
       - name: "Build and push app"
         uses: docker/build-push-action@v5
         with:
+          file: ./docker/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-latest,ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-${{ steps.date.outputs.date }},ghcr.io/pkitazos/amps-app:${{ github.ref_name }}-${{ github.sha }}
