--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,10 @@ next-env.d.ts
 *.log
 
 junk/
-
+docs/tmp/
 .react-email/
+src/db/scripts/input/
+src/db/scripts/out/
+src/db/scripts/maps/
+src/db/scripts/criteria/
+src/db/scripts/misc/
