--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
     "(admin)": "admin",
     "(admin-panel)": "admin",
     "validations": "class",
-    "trpc": "api"
+    "trpc": "api",
+    "tmp": "trash"
   },
   "better-comments.tags": [
     {
@@ -108,5 +109,6 @@
       "bold": false,
       "italic": false
     }
-  ]
+  ],
+  "cSpell.words": ["rpas"]
 }
