--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "0.0.36",
+    "@react-email/render": "^1.1.2",
     "@t3-oss/env-core": "^0.9.2",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.21.2",
@@ -79,6 +80,7 @@
     "papaparse": "^5.4.1",
     "postcss": "^8.4.41",
     "prettier": "^3.5.2",
+    "puppeteer": "^24.10.0",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
