--- a/docker/docker-compose.dev-db.yml
+++ b/docker/docker-compose.dev-db.yml
@@ -2,28 +2,26 @@ name: "amps"
 
 services:
   db:
-  # TODO migrate to latest
     image: postgres:16
     ports:
       - "127.0.0.1:6565:5432"
-    volumes:
-      - amps-db-data:/var/lib/postgresql/data/
     environment:
-      POSTGRES_USER: "root"
-      POSTGRES_PASSWORD: "1234"
-      POSTGRES_DB: "amps-db"
-      POSTGRES_HOST_AUTH_METHOD: "trust"
-
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_HOST_AUTH_METHOD: "md5"
+      
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD", "pg_isready", "-d", "${DB_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
 
+    volumes:
+      - amps-db-data:/var/lib/postgresql/data/
     networks:
       - amps-network
-
 
 networks:
   amps-network:
