updated service definition to use new amps CLI

--- a/scripts/deploy/amps-startup.service
+++ b/scripts/deploy/amps-startup.service
@@ -3,7 +3,7 @@ Description=Amps-app startup service
 
 [Service]
 Type=exec
-ExecStart=/usr/local/bin/amps-startup.sh
+ExecStart=amps start
 
 [Install]
 WantedBy=multi-user.target
