--- a/package.json
+++ b/package.json
@@ -76,9 +76,10 @@
     "embla-carousel-react": "^8.6.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.340.0",
-    "next": "14.1.0",
+    "next": "14.2.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.1",
+    "nuqs": "^2.4.3",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.5",
     "prettier": "^3.5.3",
