--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@eslint/js": "^9.31.0",
     "@faker-js/faker": "^9.8.0",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "22.5.1",
     "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.16",
