--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "allocation-app",
-  "version": "0.2.0",
+  "name": "amps",
+  "version": "0.3.0",
   "type": "module",
   "private": true,
   "prisma": {
@@ -24,7 +24,6 @@
     "db:studio": "prisma studio",
     "db:push": "eval $(grep '^DATABASE_URL' .env) && prisma db push",
     "db:drop": "eval $(grep '^DATABASE_URL' .env) && prisma migrate reset",
-    "docker:prod": "docker compose -f docker/docker-compose.yml -f docker/docker-compose.prod.override.yml up -d",
     "clearLogs": "rm *.log"
   },
   "dependencies": {
