--- a/docker/docker-compose.staging.yml
+++ b/docker/docker-compose.staging.yml
@@ -2,7 +2,7 @@ name: amps
 
 services:
   app:
-    image: "ghcr.io/pkitazos/amps-app:staging-latest"
+    image: "ghcr.io/pkitazos/amps-app:108-test-1"
     depends_on:
       - db
     ports:
