--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -18,7 +18,16 @@ services:
       MAIL_PASSWORD: ${MAIL_PASSWORD}
 
       DEV_ENV: "PROD"
+      AMPS_MODE: "PROD"
       VALIDATE_ENV_VARS: "true"
+      AUTH_FROM_HEADERS: "ON"
+
+      HEADERS_SHIB_GUID: ${HEADERS_SHIB_GUID}
+      HEADERS_SHIB_DISPLAY_NAME: ${HEADERS_SHIB_DISPLAY_NAME}
+      HEADERS_SHIB_EMAIL: ${HEADERS_SHIB_EMAIL}
+
+      AUTH_WHITELIST_ENABLED: ${AUTH_WHITELIST_ENABLED}
+      AUTH_WHITELIST_EMAILS: ${AUTH_WHITELIST_EMAILS}
 
     volumes:
       - amps-app-logs:/app/logs/
