--- a/docker/docker-compose.staging.yml
+++ b/docker/docker-compose.staging.yml
@@ -2,7 +2,7 @@ name: amps
 
 services:
   app:
-    image: "ghcr.io/pkitazos/amps-app:108-test-1"
+    image: "ghcr.io/pkitazos/amps-app:staging-latest"
     depends_on:
       - db
     ports:
@@ -20,10 +20,13 @@ services:
       MAIL_PASSWORD: ${MAIL_PASSWORD}
 
       DEV_ENV: "staging"
-      AMPS_MODE: ${AMPS_MODE}
-      AMPS_ACCESS_CONTROL: ${AMPS_ACCESS_CONTROL}
-      AMPS_WHITELISTED_USERS: ${AMPS_WHITELISTED_USERS}
+      AMPS_MODE: "staging"
       VALIDATE_ENV_VARS: "true"
+      AUTH_FROM_HEADERS: "ON"
+
+      HEADERS_SHIB_GUID: ${HEADERS_SHIB_GUID}
+      HEADERS_SHIB_DISPLAY_NAME: ${HEADERS_SHIB_DISPLAY_NAME}
+      HEADERS_SHIB_EMAIL: ${HEADERS_SHIB_EMAIL}
 
     volumes:
       - amps-app-logs:/app/logs/
