--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -22,6 +22,13 @@ services:
     networks:
       - amps-network
 
+  matching-service:
+    image: ghcr.io/pkitazos/matching-service:latest
+    ports:
+      - "127.0.0.1:8000:8000"
+    networks:
+      - amps-network
+
 networks:
   amps-network:
 
