updated docker compose staging file

--- a/docker/docker-compose.staging.yml
+++ b/docker/docker-compose.staging.yml
@@ -23,6 +23,9 @@ services:
       AMPS_MODE: "testing"
       VALIDATE_ENV_VARS: "true"
       AUTH_FROM_HEADERS: "ON"
+      AUTH_MASKING: ${AUTH_MASKING}
+      AUTH_WHITELIST_ENABLED: ${AUTH_WHITELIST_ENABLED}
+      AUTH_WHITELIST_EMAILS: ${AUTH_WHITELIST_EMAILS}
 
       HEADERS_SHIB_GUID: ${HEADERS_SHIB_GUID}
       HEADERS_SHIB_DISPLAY_NAME: ${HEADERS_SHIB_DISPLAY_NAME}
