hotfix: pass env variable through container

--- a/docker/docker-compose.staging.yml
+++ b/docker/docker-compose.staging.yml
@@ -26,6 +26,7 @@ services:
       AUTH_MASKING: ${AUTH_MASKING}
       AUTH_WHITELIST_ENABLED: ${AUTH_WHITELIST_ENABLED}
       AUTH_WHITELIST_EMAILS: ${AUTH_WHITELIST_EMAILS}
+      TEST_USER_EMAILS: ${TEST_USER_EMAILS}
 
       HEADERS_SHIB_GUID: ${HEADERS_SHIB_GUID}
       HEADERS_SHIB_DISPLAY_NAME: ${HEADERS_SHIB_DISPLAY_NAME}
