organised env pass throughs in compose files

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -20,12 +20,14 @@ services:
       DEV_ENV: "PROD"
       AMPS_MODE: "prod"
       VALIDATE_ENV_VARS: "true"
+      
       AUTH_FROM_HEADERS: "ON"
 
       HEADERS_SHIB_GUID: ${HEADERS_SHIB_GUID}
       HEADERS_SHIB_DISPLAY_NAME: ${HEADERS_SHIB_DISPLAY_NAME}
       HEADERS_SHIB_EMAIL: ${HEADERS_SHIB_EMAIL}
 
+      # ? do these need to be set in prod?
       AUTH_WHITELIST_ENABLED: ${AUTH_WHITELIST_ENABLED}
       AUTH_WHITELIST_EMAILS: ${AUTH_WHITELIST_EMAILS}
 
