--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "src/app/app.css",
+    "css": "app/app.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
