--- a/package.json
+++ b/package.json
@@ -71,12 +71,12 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
+    "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "immer": "^10.1.1",
-    "lucide-react": "^0.537.0",
+    "lucide-react": "^0.525.0",
     "next": "14.2.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.1",
@@ -97,10 +97,8 @@
     "sharp": "^0.32.6",
     "sonner": "^1.7.4",
     "superjson": "^2.2.2",
-    "tailwind-merge": "^3.3.1",
-    "tailwind-scrollbar": "^4.0.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "4.1.11",
-    "tw-animate-css": "^1.3.6",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
     "zod": "4.0.5",
@@ -122,6 +120,8 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.10.1",
     "react-email": "4.0.4",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "5.8.2",
